# MixedReality-Tiago

./: README.md
Assets/: WSATestCertificate.pfx
Assets/Materials/: Blue.mat  Floor.mat  Green.mat  Invisible.mat  Red.mat
Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityHandTrackingProfile 1.asset  New MixedRealityInputSystemProfile 3.asset  New MixedRealityToolkitConfigurationProfile 1.asset  New MixedRealityToolkitConfigurationProfile 2.asset
Assets/ROS/tiago_holo_dt/: CMakeLists.txt  exp_setup.sh  package.xml
Assets/ROS/tiago_holo_dt/config/: params.yaml
Assets/ROS/tiago_holo_dt/launch/: simulation.launch  tf_additions.launch
Assets/ROS/tiago_holo_dt/msg/: PlannedActionWithTypeAndArm.msg
Assets/ROS/tiago_holo_dt/scripts/: base_footprint_pose_service.py  motion_planner.py  tiago_experiment.py
Assets/ROS/tiago_holo_dt/srv/: ActionService.srv  ExecutionService.srv  JointStateService.srv
Assets/ROS/tiago_unity/: CMakeLists.txt  package.xml
Assets/ROS/tiago_unity/config/: params.yaml
Assets/ROS/tiago_unity/launch/: main.launch
Assets/ROS/tiago_unity/msg/: PlannedAction.msg
Assets/ROS/tiago_unity/scripts/: motion_planner.py
Assets/ROS/tiago_unity/srv/: PickPlaceService.srv  PoseService.srv
Assets/Resources/: ROSConnectionPrefab.prefab
Assets/Resources/Materials/: TrajectoryPoint.mat
Assets/Resources/Prefabs/: TrajPoint.prefab
Assets/RosMessages/MoveBase/msg/: MoveBaseActionFeedbackMsg.cs  MoveBaseActionGoalMsg.cs  MoveBaseActionMsg.cs  MoveBaseActionResultMsg.cs  MoveBaseFeedbackMsg.cs  MoveBaseGoalMsg.cs  MoveBaseResultMsg.cs
Assets/RosMessages/TiagoHoloDt/msg/: PlannedActionMsg.cs  PlannedActionWithTypeAndArmMsg.cs
Assets/Scenes/Tiago/: TiagoHologramScene.unity  TiagoNavigationScene.unity
Assets/Scripts/: InteractableBehavior.cs
Assets/Scripts/Tiago/: LidarSensor.cs  ROSNavigationInterface.cs  TiagoController.cs  TiagoROSInterface.cs
Assets/URDF/Tiago/: tiago_dual.urdf
Assets/URDF/Tiago/Materials/: Black.mat  Blue.mat  (+11 more)
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
UserSettings/: EditorUserSettings.asset
(+73 files in other folders)
